[gd_scene load_steps=12 format=3 uid="uid://c51nxve14pqa5"]

[ext_resource type="Texture2D" uid="uid://b5v2lggp2xh66" path="res://assets/sprites/test_sprites/test_room4.png" id="1_3vhlw"]
[ext_resource type="Script" path="res://room_4.gd" id="1_xjrjr"]
[ext_resource type="Texture2D" uid="uid://sg2xu5k76tbu" path="res://assets/sprites/test_sprites/test_lock.png" id="3_blliy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swpab"]
size = Vector2(436.5, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ce11"]
size = Vector2(168, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vbjg"]
size = Vector2(168, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfst1"]
size = Vector2(180.5, 37.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khuj2"]
size = Vector2(195, 49.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36hxa"]
size = Vector2(52, 113.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkgg8"]
size = Vector2(220, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvx5p"]
size = Vector2(213, 39)

[node name="Room4" type="Area2D"]
script = ExtResource("1_xjrjr")
metadata/_edit_horizontal_guides_ = []

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_3vhlw")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(225.75, 17)
shape = SubResource("RectangleShape2D_swpab")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(881, 603)
shape = SubResource("RectangleShape2D_swpab")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(210.5, 603)
shape = SubResource("RectangleShape2D_swpab")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(877, 17)
shape = SubResource("RectangleShape2D_swpab")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(89, 513)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2ce11")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(88, 136)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2ce11")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(1053, 489)
rotation = 1.5708
shape = SubResource("RectangleShape2D_0vbjg")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Walls"]
light_mask = 8
visibility_layer = 17
position = Vector2(1053, 139)
rotation = 1.5708
shape = SubResource("RectangleShape2D_0vbjg")
debug_color = Color(0.952941, 0, 0.290196, 0.419608)

[node name="Door8" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door8"]
light_mask = 4
position = Vector2(554, 24.875)
shape = SubResource("RectangleShape2D_tfst1")
debug_color = Color(0, 0.643137, 0.270588, 0.419608)

[node name="Door6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door6"]
light_mask = 4
position = Vector2(547, 603)
shape = SubResource("RectangleShape2D_khuj2")
debug_color = Color(0, 0.643137, 0.270588, 0.419608)

[node name="Door7" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door7"]
light_mask = 4
position = Vector2(85, 326.25)
shape = SubResource("RectangleShape2D_36hxa")
debug_color = Color(0, 0.647059, 0.192157, 0.419608)

[node name="Door9" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door9"]
light_mask = 4
position = Vector2(1057, 325)
shape = SubResource("RectangleShape2D_36hxa")
debug_color = Color(0, 0.647059, 0.192157, 0.419608)

[node name="UnlockArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnlockArea"]
light_mask = 256
position = Vector2(551, 55.5)
shape = SubResource("RectangleShape2D_gkgg8")
debug_color = Color(0, 0.54902, 0.92549, 0.419608)

[node name="Lock" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lock"]
light_mask = 8
visibility_layer = 17
position = Vector2(551.5, 24.5)
shape = SubResource("RectangleShape2D_gvx5p")
debug_color = Color(0.866667, 0.00784314, 0.85098, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Lock"]
position = Vector2(550, 52)
texture = ExtResource("3_blliy")

[connection signal="body_entered" from="Door8" to="." method="_on_door_8_body_entered"]
[connection signal="body_entered" from="Door6" to="." method="_on_door_6_body_entered"]
[connection signal="body_entered" from="Door7" to="." method="_on_door_7_body_entered"]
[connection signal="body_entered" from="Door9" to="." method="_on_door_9_body_entered"]
[connection signal="body_entered" from="UnlockArea" to="." method="_on_unlock_area_body_entered"]
